cspm/cspm-platform/services/inventory-collector/output/588989875114/eu-west-2/ec2_52/describe_security_groups/describe_security_groups_output_20250603_144306.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-2b88a542",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-2b88a542",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "ssh for admin",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 5901,
          "ToPort": 5901,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "Description": "vnc mode",
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0c37ac1a72b39d51c",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0c37ac1a72b39d51c",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-8",
      "Description": "launch-wizard-8 created 2018-10-27T19:30:49.384+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-02fa1d7f1885c34d6",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-02fa1d7f1885c34d6",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-11",
      "Description": "launch-wizard-11 created 2018-12-17T22:31:25.361+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0dbdd7cf62c04f60b",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0dbdd7cf62c04f60b",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-7",
      "Description": "launch-wizard-7 created 2018-10-27T19:18:07.918+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0b02863f294b7863f",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0b02863f294b7863f",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-13",
      "Description": "launch-wizard-13 created 2020-11-05T11:17:18.873+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0975be09277b6526a",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0975be09277b6526a",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-12",
      "Description": "launch-wizard-12 created 2020-09-10T13:41:26.199+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-038d69d7442f38502",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-038d69d7442f38502",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-9",
      "Description": "launch-wizard-9 created 2018-12-14T13:55:46.117+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0cb59c57cd991b4f8",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0cb59c57cd991b4f8",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-6",
      "Description": "launch-wizard-6 created 2018-10-27T19:13:13.315+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0051ae3b64205e6e2",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-0051ae3b64205e6e2",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-5",
      "Description": "launch-wizard-5 created 2018-09-04T20:28:52.993+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-02e2ab2a9b579503e",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-02e2ab2a9b579503e",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-10",
      "Description": "launch-wizard-10 created 2018-12-17T16:10:56.976+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-c4eed0ad",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-c4eed0ad",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-2",
      "Description": "launch-wizard-2 created 2017-08-30T20:00:03.995+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-2ee3e345",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-2ee3e345",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-3",
      "Description": "launch-wizard-3 created 2018-08-12T20:29:45.729+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-6defd104",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-6defd104",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-1",
      "Description": "launch-wizard-1 created 2017-08-30T19:57:41.306+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 3389,
          "ToPort": 3389,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-21ebeb4a",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-3362f95a",
      "SecurityGroupArn": "arn:aws:ec2:eu-west-2:588989875114:security-group/sg-21ebeb4a",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-4",
      "Description": "launch-wizard-4 created 2018-08-12T21:04:13.633+05:30",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 80,
          "ToPort": 80,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [
            {
              "CidrIpv6": "::/0"
            }
          ],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "14f7422a-8e47-4144-9a58-4893b15ae665",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "14f7422a-8e47-4144-9a58-4893b15ae665",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "vary": "accept-encoding",
      "content-type": "text/xml;charset=UTF-8",
      "transfer-encoding": "chunked",
      "date": "Tue, 03 Jun 2025 14:43:19 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
